@@ -62,4 +62,25 @@ EbEventBase* EbC::_new_event(const EbBitMask& serverId)
   return new(&_events) EbEvent(serverId, _clients, datagram, key);
 }
 
+//
+//  The following two routines override the base class, so that
+//  these event builders will always have a full "select mask";
+//  i.e. fetch will be called for all pending IO.  This overrides
+//  the base class behavior which only selects upon servers that
+//  haven't yet contributed to the current event under construction.
+//  This specialization is useful where the server data has
+//  limited buffering (segment levels) and needs better realtime
+//  response.
+//
+int EbC::poll()
+{
+  if(!ServerManager::poll()) return 0;
+  if(active().isZero()) ServerManager::arm(managed());
+  return 1;
+}
 
+int EbC::processIo(Server* srv)
+{
+  Eb::processIo(srv);
+  return 1;
+}
